# CrossPlatformEnergyAccounting

baselines/: plot.py  (+2 more)
energy-monitor/: aggregator.py  delta_aggregator.py  docker-compose.yml  docker-test.sh  pyproject.toml
energy-monitor/accumulation/: aggregate_metrics.py  cgroups.py  docker.py  k8s.py
energy-monitor/database/: DBClient.py
energy-monitor/estimation/: cvxpy_estimator.py
energy-monitor/estimation/feature_selection/: feature_selection.py
energy-monitor/estimation/linear/: cpu_share_estimation.py
energy-monitor/exporter/: exporter.py
energy-monitor/inference/: api.py
energy-monitor/monitoring/: bpf_monitoring_client.py  perf_monitoring_client.py  proc_monitoring_client.py  tracer.c
energy-monitor/smart_meter_api_wrapper/: PowerSampler.py
energy-process-exporter/: aggregator.py  delta_aggregator.py  pyproject.toml
energy-process-exporter/monitoring/: bpf_monitoring_client.py  proc_monitoring_client.py  tracer.c
energy-process-mapping/: README.md  delta_aggregator.py  pyproject.toml  run_benchmark_parallel.sh  test_benchmark.sh
energy-process-mapping/database/: DBClient.py
energy-process-mapping/estimation/: cvxpy_estimator.py
energy-process-mapping/estimation/data/: data_loader.py
energy-process-mapping/estimation/feature_selection/: feature_selection.py
energy-process-mapping/estimation/linear/: cpu_time_estimator.py  linear_regression_sumof.py
energy-process-mapping/load_generation/: simple_load_generator.py
energy-process-mapping/monitoring/: monitor_client.py  perf_monitoring_client.py  syscall_classes.py
(+5 files in other folders)
