[tool.poetry]
name = "sose-25-mdps"
version = "0.1.0"
description = ""
authors = [
    "Julius Irion <irion@tu-berlin.de>",
    "Jannis Kappel"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
requests = ">=2.32.3,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
influxdb-client = "^1.49.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"